<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Contacts</string>

    <!-- Label for overflow menu option that inserts fake contact data into the app [CHAR LIMIT=20] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Label for overflow menu option that inserts fake contact data into the app [CHAR LIMIT=20] -->
    <string name="discard">discard</string>
    <!-- Label for overflow menu option that inserts fake contact data into the app [CHAR LIMIT=20] -->
    <string name="keep_editing">keep editing</string>

    <!-- Label for overflow menu option that deletes all contact data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Contacts</string>

    <!-- Title for the activity to add a new contact [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_contact">Add a Contact</string>
    <!-- Title for the activity to add a new contact [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_contact">Edit the Contact</string>

    <!-- Label for editor menu option to save contact and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current contact [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_Phone_Number">Phone No</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_contact_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_contact_pet_name">Petname</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_contact_number">Number</string>

    <!-- Units for weight of the contact (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_contact_code">91</string>

    <!-- Label for dropdown menu option if the contact's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the contact is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the contact is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>
    <!-- Toast message in editor when new contact has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_contact_successful">Contact saved</string>

    <!-- Toast message in editor when new contact has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_contact_failed">Error with saving contact</string>
    <!-- Toast message in editor when new contact has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_contact_successful">Contact saved</string>

    <!-- Toast message in editor when new contact has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_contact_failed">Error with saving contact</string>
    <string name="editor_delete_contact_successful">Contact deleted</string>

    <!-- Toast message in editor when new contact has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_contact_failed">Error with deleting contact</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a contact [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a contact</string>
    <!-- Subtitle text for the empty view that prompts the user to add a contact [CHAR LIMIT=50] -->
    <string name="action_insert_dummy_data">Insert dummy data</string>
</resources>

